--- a/Come.AspNetCore.Sample/Come.AspNetCore.Sample.csproj
+++ b/Come.AspNetCore.Sample/Come.AspNetCore.Sample.csproj
@@ -1,13 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Come.CollectiveOAuth\Come.CollectiveOAuth.csproj" />
   </ItemGroup>
-
-
-
 </Project>
