--- a/Come.AspNetCore.Sample/appsettings.json
+++ b/Come.AspNetCore.Sample/appsettings.json
@@ -1,6 +1,5 @@
 {
   "AppSettings": {
-    /*Œ¢–≈∆Û“µ∫≈…®¬Î*/
     "CollectiveOAuth_WECHAT_ENTERPRISE_SCAN_ClientId": "xxxxxxxxxxxxxxxxx",
     "CollectiveOAuth_WECHAT_ENTERPRISE_SCAN_AgentId": "xxxxxx",
     "CollectiveOAuth_WECHAT_ENTERPRISE_SCAN_ClientSecret": "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx",
@@ -13,5 +12,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ProxyTo": ""
 }
