--- a/Come.CollectiveOAuth/Come.CollectiveOAuth.csproj
+++ b/Come.CollectiveOAuth/Come.CollectiveOAuth.csproj
@@ -1,39 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;netstandard2.0;net45</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <SignAssembly>false</SignAssembly>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="System.Net.Http" Version="4.3.4" />
+    <Compile Remove="Request\AuthRequests\AlipayMpAuthRequest.cs" />
+    <Compile Remove="Request\AuthRequests\DingTalkScanAuthRequest.cs" />
   </ItemGroup>
-
   <ItemGroup>
-    <Reference Include="TopSdk">
-      <HintPath>Libraries\TopSdk.dll</HintPath>
-    </Reference>
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
-
   <ItemGroup Condition="'$(TargetFramework)' == 'netcoreapp3.1'">
-    <PackageReference Include="AlipaySDKNet.Standard">
-      <Version>4.2.13</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions">
-      <Version>3.1.1</Version>
+      <Version>8.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Caching.Memory">
-      <Version>3.1.1</Version>
+      <Version>8.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.Configuration.ConfigurationManager">
-      <Version>4.7.0</Version>
+      <Version>8.0.0</Version>
     </PackageReference>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="System.Xml.XmlDocument" Version="4.3.0" />
-    <PackageReference Include="System.Xml.XPath.XmlDocument" Version="4.3.0" />
   </ItemGroup>
-
   <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
     <PackageReference Include="AlipaySDKNet">
       <Version>4.2.13</Version>
@@ -49,19 +38,13 @@
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Configuration" />
   </ItemGroup>
-
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="AlipaySDKNet.Standard">
-      <Version>4.2.13</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions">
-      <Version>3.1.1</Version>
+      <Version>8.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Caching.Memory">
-      <Version>3.1.1</Version>
+      <Version>8.0.0</Version>
     </PackageReference>
-    <PackageReference Include="System.Xml.XmlDocument" Version="4.3.0" />
-    <PackageReference Include="System.Xml.XPath.XmlDocument" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.0" />
   </ItemGroup>
 </Project>
